// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`MCP schema snapshots initialize response instructions text 1`] = `
"Apple Reminders MCP Server — Manage Apple Reminders on macOS.

Call help(tool_name) for documentation on any tool.
Call help(tool_name, verbose=true) for comprehensive docs with examples.
Call guidance() for best practices and strategic usage patterns.
Call schema(tool_name) to inspect input/output schemas.

Quick start: query_reminders({}) returns incomplete reminders from the default list."
`;

exports[`MCP schema snapshots initialize response server info 1`] = `
{
  "name": "apple-reminders",
  "version": "0.1.0",
}
`;

exports[`MCP schema snapshots tool schemas query_reminders 1`] = `
{
  "description": "Search and filter reminders. Returns incomplete reminders from the default list by default. Convention: structured params (list, includeCompleted/completedOnly, searchText, per-field date ranges) filter at fetch time; the 'query' JMESPath expression filters/projects on the result. See docs/query-reference.md and help("query_reminders") for full parameter docs.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "completedOnly": {
        "default": false,
        "description": "Return only completed reminders. Mutually exclusive with includeCompleted.",
        "type": "boolean",
      },
      "createdFrom": {
        "description": "Filter by createdDate >= this ISO 8601 date (or YYYY-MM-DD).",
        "type": "string",
      },
      "createdTo": {
        "description": "Filter by createdDate <= this ISO 8601 date (or YYYY-MM-DD).",
        "type": "string",
      },
      "cursor": {
        "description": "Opaque cursor from previous response's pageInfo.endCursor for next page.",
        "type": "string",
      },
      "dueFrom": {
        "description": "Filter by dueDate >= this ISO 8601 date (or YYYY-MM-DD).",
        "type": "string",
      },
      "dueTo": {
        "description": "Filter by dueDate <= this ISO 8601 date (or YYYY-MM-DD).",
        "type": "string",
      },
      "hashtag": {
        "description": "Filter by hashtag name (case-insensitive). Matches reminders that have this hashtag applied. Requires SQLite enrichment (Full Disk Access on the calling process).",
        "type": "string",
      },
      "includeCompleted": {
        "default": false,
        "description": "Include completed reminders alongside incomplete ones. Default is incomplete only; only widen when the user explicitly asks for completed/archived items. Mutually exclusive with completedOnly.",
        "type": "boolean",
      },
      "list": {
        "additionalProperties": false,
        "description": "Which list to search. Omit for default list. Set all=true only when the user explicitly asks for cross-list results.",
        "properties": {
          "all": {
            "description": "Set true to search all lists",
            "type": "boolean",
          },
          "id": {
            "description": "Exact list ID",
            "type": "string",
          },
          "name": {
            "description": "List name (case-insensitive match)",
            "type": "string",
          },
        },
        "type": "object",
      },
      "modifiedFrom": {
        "description": "Filter by modifiedDate >= this ISO 8601 date (or YYYY-MM-DD).",
        "type": "string",
      },
      "modifiedTo": {
        "description": "Filter by modifiedDate <= this ISO 8601 date (or YYYY-MM-DD).",
        "type": "string",
      },
      "outputDetail": {
        "default": "compact",
        "description": "Controls which fields are returned. 'minimal': id, title. 'compact' (default): most useful fields, nulls omitted. 'full': all fields, nulls shown. Ignored when 'query' (JMESPath) is provided. listName and isCompleted are contextually omitted in minimal/compact when implied by query params.",
        "enum": [
          "minimal",
          "compact",
          "full",
        ],
        "type": "string",
      },
      "parentId": {
        "description": "Filter to direct children of the given reminder UUID. Mutually exclusive with topLevelOnly. Requires SQLite enrichment.",
        "type": "string",
      },
      "perPage": {
        "description": "Results per page (1-1000). Omit to return all (auto-paginates at 200).",
        "maximum": 1000,
        "minimum": 1,
        "type": "integer",
      },
      "query": {
        "description": "JMESPath expression for advanced filtering/projection. Applied after list, status, searchText, and date filters. When provided, outputDetail is ignored (always uses full fields as input). Project-specific extensions: lower(string), upper(string).",
        "type": "string",
      },
      "searchText": {
        "description": "Case-insensitive text search across reminder titles and notes",
        "type": "string",
      },
      "sectionId": {
        "description": "Filter by section (matches section UUID or display name, case-insensitive). Requires SQLite enrichment.",
        "type": "string",
      },
      "sortBy": {
        "default": "newest",
        "description": "Sort order. Ignored if 'query' includes sorting.",
        "enum": [
          "newest",
          "oldest",
          "priority",
          "dueDate",
        ],
        "type": "string",
      },
      "topLevelOnly": {
        "default": false,
        "description": "Return only reminders without a parent. Mutually exclusive with parentId. Requires SQLite enrichment.",
        "type": "boolean",
      },
    },
    "type": "object",
  },
  "name": "query_reminders",
}
`;

exports[`MCP schema snapshots tool schemas get_lists 1`] = `
{
  "description": "Get all available reminder lists with names, IDs, and default indicator. No parameters needed.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {},
    "type": "object",
  },
  "name": "get_lists",
}
`;

exports[`MCP schema snapshots tool schemas create_list 1`] = `
{
  "description": "Create a new reminder list. Requires a name parameter.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "name": {
        "description": "Name for the new list",
        "type": "string",
      },
    },
    "required": [
      "name",
    ],
    "type": "object",
  },
  "name": "create_list",
}
`;

exports[`MCP schema snapshots tool schemas create_reminders 1`] = `
{
  "description": "Create one or more reminders with optional notes, due date, priority, alarms, recurrence, and URL. Supports batch creation. Use help("create_reminders") for parameter details and examples.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "reminders": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "alarms": {
              "description": "Alarm notifications for the reminder",
              "items": {
                "additionalProperties": false,
                "properties": {
                  "date": {
                    "description": "ISO 8601 date/time (for absolute alarms)",
                    "type": "string",
                  },
                  "offset": {
                    "description": "Seconds before due date (for relative alarms). E.g., 3600 = 1 hour before.",
                    "type": "integer",
                  },
                  "type": {
                    "description": "Alarm type: 'relative' (offset from due date) or 'absolute' (specific date/time)",
                    "enum": [
                      "relative",
                      "absolute",
                    ],
                    "type": "string",
                  },
                },
                "required": [
                  "type",
                ],
                "type": "object",
              },
              "type": "array",
            },
            "dueDate": {
              "description": "Due date in ISO 8601 format",
              "type": "string",
            },
            "dueDateIncludesTime": {
              "description": "Whether the due date includes a specific time. Set false for all-day reminders. Default: true.",
              "type": "boolean",
            },
            "list": {
              "additionalProperties": false,
              "description": "Target list. Uses default list if omitted.",
              "properties": {
                "id": {
                  "type": "string",
                },
                "name": {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "notes": {
              "description": "Reminder notes/body text",
              "type": "string",
            },
            "priority": {
              "description": "Priority level. Omit or pass null for no priority.",
              "enum": [
                null,
                "low",
                "medium",
                "high",
              ],
              "type": [
                "string",
                "null",
              ],
            },
            "recurrenceRule": {
              "additionalProperties": false,
              "description": "Recurrence rule for repeating reminders",
              "properties": {
                "daysOfMonth": {
                  "description": "Days of month (1-31, or negative for last N days: -1=last day, -2=second-to-last, etc.). For monthly frequency.",
                  "items": {
                    "maximum": 31,
                    "minimum": -31,
                    "type": "integer",
                  },
                  "type": "array",
                },
                "daysOfWeek": {
                  "description": "Days of week (1=Sunday, 2=Monday, ..., 7=Saturday). For weekly/monthly frequency.",
                  "items": {
                    "maximum": 7,
                    "minimum": 1,
                    "type": "integer",
                  },
                  "type": "array",
                },
                "endCount": {
                  "description": "Number of occurrences before stopping",
                  "minimum": 1,
                  "type": "integer",
                },
                "endDate": {
                  "description": "ISO 8601 date when recurrence stops",
                  "type": "string",
                },
                "frequency": {
                  "description": "How often the reminder repeats",
                  "enum": [
                    "daily",
                    "weekly",
                    "monthly",
                    "yearly",
                  ],
                  "type": "string",
                },
                "interval": {
                  "default": 1,
                  "description": "Repeat every N periods (e.g., 2 = every other week)",
                  "minimum": 1,
                  "type": "integer",
                },
                "monthsOfYear": {
                  "description": "Months of year (1-12). For yearly frequency.",
                  "items": {
                    "maximum": 12,
                    "minimum": 1,
                    "type": "integer",
                  },
                  "type": "array",
                },
                "weekPosition": {
                  "description": "Week position within month: 1=first, 2=second, ..., -1=last. Used with daysOfWeek for 'first Monday' patterns.",
                  "type": "integer",
                },
              },
              "required": [
                "frequency",
              ],
              "type": "object",
            },
            "title": {
              "description": "Reminder title",
              "type": "string",
            },
            "url": {
              "description": "URL to associate with the reminder",
              "type": "string",
            },
          },
          "required": [
            "title",
          ],
          "type": "object",
        },
        "minItems": 1,
        "type": "array",
      },
    },
    "required": [
      "reminders",
    ],
    "type": "object",
  },
  "name": "create_reminders",
}
`;

exports[`MCP schema snapshots tool schemas update_reminders 1`] = `
{
  "description": "Update one or more reminders. Only specified fields are changed; omitted fields are preserved. Supports marking complete/incomplete, moving between lists, and clearing fields with null. Use help("update_reminders") for parameter details.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "reminders": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "alarms": {
              "description": "Alarm notifications. Set to null to clear all alarms.",
              "items": {
                "additionalProperties": false,
                "properties": {
                  "date": {
                    "description": "ISO 8601 date/time (for absolute alarms)",
                    "type": "string",
                  },
                  "offset": {
                    "description": "Seconds before due date (for relative alarms)",
                    "type": "integer",
                  },
                  "type": {
                    "description": "Alarm type",
                    "enum": [
                      "relative",
                      "absolute",
                    ],
                    "type": "string",
                  },
                },
                "required": [
                  "type",
                ],
                "type": "object",
              },
              "type": "array",
            },
            "completed": {
              "description": "Set true to complete, false to uncomplete",
              "type": "boolean",
            },
            "completedDate": {
              "description": "Completion date in ISO 8601 format. Set to null to uncomplete. Overrides 'completed' if both provided.",
              "type": "string",
            },
            "dueDate": {
              "description": "New due date in ISO 8601 format. Set to null to clear.",
              "type": "string",
            },
            "dueDateIncludesTime": {
              "description": "Whether the due date includes a specific time. Set false for all-day reminders.",
              "type": "boolean",
            },
            "id": {
              "description": "Reminder ID to update (full or abbreviated prefix)",
              "type": "string",
            },
            "list": {
              "additionalProperties": false,
              "description": "Move to this list",
              "properties": {
                "id": {
                  "type": "string",
                },
                "name": {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "notes": {
              "description": "New notes. Set to null to clear.",
              "type": "string",
            },
            "priority": {
              "description": "New priority level. Set to null to clear (remove the priority).",
              "enum": [
                null,
                "low",
                "medium",
                "high",
              ],
              "type": [
                "string",
                "null",
              ],
            },
            "recurrenceRule": {
              "additionalProperties": false,
              "description": "Recurrence rule. Set to null to clear.",
              "properties": {
                "daysOfMonth": {
                  "items": {
                    "type": "integer",
                  },
                  "type": "array",
                },
                "daysOfWeek": {
                  "items": {
                    "type": "integer",
                  },
                  "type": "array",
                },
                "endCount": {
                  "minimum": 1,
                  "type": "integer",
                },
                "endDate": {
                  "type": "string",
                },
                "frequency": {
                  "enum": [
                    "daily",
                    "weekly",
                    "monthly",
                    "yearly",
                  ],
                  "type": "string",
                },
                "interval": {
                  "default": 1,
                  "minimum": 1,
                  "type": "integer",
                },
                "monthsOfYear": {
                  "items": {
                    "type": "integer",
                  },
                  "type": "array",
                },
                "weekPosition": {
                  "type": "integer",
                },
              },
              "required": [
                "frequency",
              ],
              "type": "object",
            },
            "title": {
              "description": "New title",
              "type": "string",
            },
            "url": {
              "description": "URL to associate with the reminder. Set to null to clear.",
              "type": "string",
            },
          },
          "required": [
            "id",
          ],
          "type": "object",
        },
        "minItems": 1,
        "type": "array",
      },
    },
    "required": [
      "reminders",
    ],
    "type": "object",
  },
  "name": "update_reminders",
}
`;

exports[`MCP schema snapshots tool schemas delete_reminders 1`] = `
{
  "description": "Delete one or more reminders permanently by ID. This action cannot be undone.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "ids": {
        "description": "Array of reminder IDs to delete (full or abbreviated prefixes)",
        "items": {
          "type": "string",
        },
        "minItems": 1,
        "type": "array",
      },
    },
    "required": [
      "ids",
    ],
    "type": "object",
  },
  "name": "delete_reminders",
}
`;

exports[`MCP schema snapshots tool schemas export_reminders 1`] = `
{
  "description": "Export reminders to a JSON file for backup. Writes data to a file instead of returning it in context. Optional path, list filter, and includeCompleted parameters.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "includeCompleted": {
        "default": true,
        "description": "Include completed reminders in export",
        "type": "boolean",
      },
      "lists": {
        "description": "Lists to export. Default: all lists.",
        "items": {
          "additionalProperties": false,
          "properties": {
            "id": {
              "description": "List ID",
              "type": "string",
            },
            "name": {
              "description": "List name",
              "type": "string",
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "path": {
        "description": "Custom file path. Supports ~ for home directory. Default: temp directory with timestamp.",
        "type": "string",
      },
    },
    "type": "object",
  },
  "name": "export_reminders",
}
`;

exports[`MCP schema snapshots tool schemas tool count has not changed 1`] = `
[
  "create_list",
  "create_reminders",
  "delete_reminders",
  "export_reminders",
  "get_lists",
  "guidance",
  "help",
  "list_hashtags",
  "query_reminders",
  "schema",
  "update_reminders",
]
`;
